crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__unary_negation_access_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "-rec1.field\n"
---
(BeginTopLevelDecls
    HintExpr
    (*
        (* Ident=>LowerIdent@1 DotIdent=>NoSpaceDotLowerIdent@2 EndFieldAccess)
    EndUnaryMinus)
EndTopLevelDecls)

[=== canfmt below ===]
UnaryOp(Minus, RecordAccess(Ident("rec1"), ".field"))

[=== formatted below ===]

