crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__unary_negation_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "-foo\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (* Ident=>LowerIdent@1 EndUnaryMinus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
UnaryOp(Minus, Ident("foo"))

[=== formatted below ===]

