crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__unary_negation_with_parens_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "-(whee  12 foo)\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (*
            (BeginParens
                (*
                    Ident=>LowerIdent@2
                    InlineApply=>LowerIdent@2
                    Num=>IntBase10@3
                    InlineApply=>IntBase10@3
                    Ident=>LowerIdent@4
                EndApply)
            EndParens)
        EndUnaryMinus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
UnaryOp(Minus, Apply(Ident("whee"), [IntBase10("12"), Ident("foo")]))

[=== formatted below ===]

