crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__unary_not_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "!blah\n"
---
(BeginTopLevelDecls
    HintExpr
    (* Ident=>LowerIdent@1 EndUnaryNot)
EndTopLevelDecls)

[=== canfmt below ===]
UnaryOp(Not, Ident("blah"))

[=== formatted below ===]

